[package]
name = "texy-process"
version = "0.1.0"
edition = "2021"

[lib]
name = "texy"
crate-type = ["cdylib", "rlib"]

[dependencies]
regex = "1.7.0"
pyo3 = { version = "0.17.3", features = ["auto-initialize"] }
lazy_static = "1.4.0"
serde_json = "1.0.89"
rayon = "1.6.1"
procspawn = "0.10.1"

[features]
extension-module = ["pyo3/extension-module"]
default = ["extension-module"]

[package.metadata.maturin]
name = "texy._internal"

[profile.release]
lto = true
codegen-units = 1