[project]
name = "texy"
description = "Supercharge text processing"
readme = "README.md"
requires-python = ">=3.6"

[project.urls]
homepage = "https://github.com/mdmmn378/texy"
repository = "https://github.com/mdmmn378/texy"

[build-system]
requires = ["maturin>=0.11,<0.15"]
build-backend = "maturin"

[tool.maturin]
include = [
    { path = "Cargo.lock", format = "sdist" }
]
locked = true

[tool.isort]
profile = "black"